<resources>
    <string name="app_name">ReviewApp</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="RetypePass">Retype password</string>
    <string name="username">Username</string>
    <string name="welcometext">Login</string>
    <string name="email">Email</string>
    <string name="my_likebutton_description">Click to like the review</string>
    <string name="my_unlilikebutton_description">Click to unlike the review</string>
    <string name="replyBtn_description">Click here to view the replies</string>
    <string name="all_reviews">All Reviews</string>
</resources>