<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/loginimage"
    tools:context=".SignUp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:forceDarkAllowed="true"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edit_text_container"
            android:padding="24dp">

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="#bc7d5e"
                android:textSize="36sp"
                android:textStyle="bold|italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signUp_username"
                android:background="@drawable/custom_edit_text_container"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/username"
                android:drawableLeft="@drawable/baseline_person_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userValidty"
                android:enabled="false"
                android:padding="1dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/red"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signUp_email"
                android:background="@drawable/custom_edit_text_container"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:drawableLeft="@drawable/baseline_email_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emailValidty"
                android:enabled="false"
                android:padding="1dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/red"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/SignUp_password"
                android:background="@drawable/custom_edit_text_container"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/confirm_password"
                android:background="@drawable/custom_edit_text_container"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/RetypePass"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/passwordValidty"
                android:enabled="false"
                android:padding="1dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/red"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/loginandsignup"
                android:layout_marginTop="20dp"
                android:padding="3dp"
                android:weightSum="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cornerRadius="30dp"
                    android:id="@+id/SignPage_Btn"
                    android:text="@string/signup"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:background="@drawable/switchbtn"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>